@@ -1,6 +1,6 @@
-DIST IPAfont00203.zip 16045502 RMD160 26ea0efe725558bc3e5e6dff66264cee0f6fb5a5 SHA1 8d7d3e0c0511427dd94b52eebb554ad6108d10ca SHA256 ab6799af23903c1ee180e9c784d0b32b4f0b140f28df6980bdb0294f396c6a9e
+DIST IPAfont00301.zip 10255237 RMD160 b9721e4ed1407f5d0ac15b36f9373bb17a10d58e SHA1 daf12bb74ce72ec7919a3ab9e31a16d0abb95f7d SHA256 f3df7527dec37e1d8fcd34c5e0b46797372321f4a0ba15b902a145f78bd7e4cc
 DIST grass5.0.3_i686-pc-linux-i18n-ipafull-gnu_bin.tar.gz 47275548 RMD160 99416e08ca352938146c7390d5f3d08779d0fd88 SHA1 fefcc248caa6593c76104606d4c58a2f2889d95b SHA256 484f22c9ae7d003c9c7401e93c5adf157112aa1cb890f8945f92982582d7644d
 EBUILD ja-ipafonts-0.0.20040715.ebuild 828 RMD160 812776ac50f7235b5fec0d947e3ecca20cdf2ea7 SHA1 4c600718f5e592d907ceca5d1f1c9e770dd8ae7c SHA256 4189ed7c05581d6b67d905f7527d91a742dadc2ce016a1123b3742b57abbf619
-EBUILD ja-ipafonts-002.03.ebuild 730 RMD160 b7977d4aa5ca52b124bc92c793c1dba6e1f4b085 SHA1 635471c774213c9470c17c56c03766a9233f82d2 SHA256 c1cf2998a743fb6e90077ac31eda686423a0bd7dca343eb6499e983f770ed3d4
-MISC ChangeLog 1776 RMD160 df68627a0565524f2bb8f43935677a312a2c0f29 SHA1 95b7d20c103cb6c421ced37d64c9f18484795ed9 SHA256 ef5443028d71cf3280dfe390727498034caf4e31ca09a512459e09142a9441dc
+EBUILD ja-ipafonts-003.01.ebuild 723 RMD160 40483f83d0ac1a7fac7ebac8f91a5316dbd46c3e SHA1 70ae9c45f5be1d329fff3bd7e40f5208f7c2dc9e SHA256 daf947e0f7a8117eef743e9c0baed5e5ec2ec17d4ce7d03e0a6cce1c3979661e
+MISC ChangeLog 1985 RMD160 d3f49eaab5559ae711f28bf4271a6ef996eb6e3b SHA1 02e61a1a849e41f379dcb35651a8eaa7cdd8f076 SHA256 c2d2d20bb166d54bd7a0488e585c6e3f5e6634c399e91941a11ab40a07c62b6c
 MISC metadata.xml 175 RMD160 4be49b8c0297a54a570715005c60f91a178807bf SHA1 80dc294bed90807462c2ef2bb5d8229a9b708f47 SHA256 5c2b5892c4a52e0f1585a34ed70e94042c3684a5f1021f077b2c5756d51120ce
